# TrashCan

./: Cargo.toml  README.md  assembly specyfication.md  things that i should have made differently.md
assembler/: Cargo.toml
assembler/src/: lib.rs  parsing.rs
compiler/: Cargo.toml
compiler/src/: lib.rs
compiler/src/assembly_writer/: assembly_instructions.rs  core_fucntions.rs  core_functions.rs  data_structures.rs  expression_handler_functions.rs  helper_methods.rs  mod.rs
compiler/src/lexer/: mod.rs  tokens.rs
compiler/src/parser/: expression.rs  expression_parsing_functions.rs  (+4 more)
cpu/: Cargo.toml
cpu/src/: chips.rs  error.rs  fb.rs  gui.rs  lib.rs  peripherals.rs  program_loader.rs
cpu/src/chips/: addition.rs  b32.rs  b8.rs  division.rs  memory.rs  multiplication.rs  thread.rs
cpu/src/chips/memory/: RAM.rs
cpu/src/chips/memory/RAM/: ram256.rs  ram256k.rs  ram32k.rs  ram4k.rs  ram512.rs  ram64.rs  ram8.rs
cpu/src/chips/thread/: instructions.rs
cpu/src/chips/thread/instructions/: bitwise.rs  comparison.rs  cpu_management.rs  math.rs  memory_manipulation.rs  special.rs  stack.rs
cpu/src/gui/: variables.rs
cpu/src/peripherals/: serial.rs
programs/: test.asm  test.tip  test.tl
programs/code/: allocator.tip  init_code.tip  interrupt_handlers.tip  syscall.tip  trash_can_os.tip  useful.tip
programs/compiled/: trash_can_os.asm
src/: chips.rs  error.rs  gui.rs  instructions.rs  main.rs  threads.rs
src/chips/: addition.rs  alu.rs  b16.rs  b32.rs  b8.rs  bit.rs  dLatch.rs  division.rs  memory.rs  multiplication.rs
src/gui/: variables.rs
(+23 files in other folders)
