[package]
name = "cpu"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
lazy_static = "1.5"
anyhow =  "1.0"
colog = "1.3"
log = "0.4"
crossbeam-queue= "0.3"
clap = { version = "4", features = ["derive"] }
minifb = "0.28"
[features]
realistic =[]
